--- a/doc/rcs/git/discussion.mdwn
+++ b/doc/rcs/git/discussion.mdwn
@@ -7,7 +7,7 @@ Otherwise, I hope migrating is just importing the svn repo to git and then setti
 ### Solution ###
 **Basis:** I only use ikiwiki as a wiki compiler. No cgi or anything.
 
-I imported my svn repo into git with git-svnimport. I reconfigured ikiwiki to _not use any rcs_. In `ikiwiki.setup`, I have the git repository as srcdir, and a suitable dstdir. 
+I imported my svn repo into git with `git-svnimport`. I reconfigured ikiwiki to _not use any rcs_. In `ikiwiki.setup`, I have the git repository as srcdir, and a suitable dstdir. 
 
 Then, in my git repository, I added this `post-commit` hook to refresh the wiki:
 
