* inline: add feedonly option, set feedonly=yes to get only the feed button   but not inline the pages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ ikiwiki (2.8) UNRELEASED; urgency=low
 
   * Redid the debian/copyright file, using the proposed new copyright file
     format. Included many details not previously listed in the old file.
+  * inline: add feedonly option, set feedonly=yes to get only the feed button
+    but not inline the pages.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 10 Sep 2007 20:25:40 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 13 Sep 2007 18:07:51 -0400
 
 ikiwiki (2.7) unstable; urgency=low
 
