--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -91,3 +91,5 @@ directive:
   specifying a tighter [[PageSpec]] here.
 * `feedshow` - Specify the maximum number of matching pages to include in
   the rss/atom feeds. The default is the same as the `show` value above,
+* `feedonly` - Only generate the feed, do not display the pages inline on
+  the page.
