* meta: Support license and copyright information. The information will   be shown in the page footer. HTML will also be inserted that should   support the rel=license microformat as well as the HTML spec's   rel=copyright.

--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -41,7 +41,13 @@ You can use any field names you like, but here are some predefined ones:
 
 * license
 
-  Specifies a copyright license for the page, for example, "GPL".
+  Specifies a license for the page, for example, "GPL". Can contain
+  WikiLinks.
+
+* copyright
+
+  Specifies the copyright of the page, for example, "Copyright 2007 by
+  Joey Hess". Can contain WikiLinks.
 
 * author
 
