--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,12 @@ ikiwiki (2.8) UNRELEASED; urgency=low
     format. Included many details not previously listed in the old file.
   * inline: add feedonly option, set feedonly=yes to get only the feed button
     but not inline the pages.
+  * meta: Support license and copyright information. The information will
+    be shown in the page footer. HTML will also be inserted that should
+    support the rel=license microformat as well as the HTML spec's
+    rel=copyright.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 13 Sep 2007 18:07:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 14 Sep 2007 13:05:22 -0400
 
 ikiwiki (2.7) unstable; urgency=low
 
