* table plugin: Actually specify the delimiter.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ ikiwiki (2.8) UNRELEASED; urgency=low
     be shown in the page footer. HTML will also be inserted that should
     support the rel=license microformat as well as the HTML spec's
     rel=copyright.
+  * table plugin: Actually specify the delimiter.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 14 Sep 2007 13:05:22 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 15:07:35 -0400
 
 ikiwiki (2.7) unstable; urgency=low
 
