--- a/debian/changelog
+++ b/debian/changelog
@@ -8,9 +8,12 @@ ikiwiki (2.8) UNRELEASED; urgency=low
     be shown in the page footer. HTML will also be inserted that should
     support the rel=license microformat as well as the HTML spec's
     rel=copyright.
-  * table plugin: Actually specify the delimiter.
+  * table plugin: Actually specify the delimiter when parsing CSV.
+  * table plugin: The previous version broke WikiLinks inside quoted values.
+    Fix this by linkifying CSV data after parsing it, while DSV data is still
+    linkified before parsing.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 15:07:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 15:34:17 -0400
 
 ikiwiki (2.7) unstable; urgency=low
 
