--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.8) UNRELEASED; urgency=low
+ikiwiki (2.8) unstable; urgency=low
 
   * Redid the debian/copyright file, using the proposed new copyright file
     format. Included many details not previously listed in the old file.
@@ -13,7 +13,7 @@ ikiwiki (2.8) UNRELEASED; urgency=low
     Fix this by linkifying CSV data after parsing it, while DSV data is still
     linkified before parsing.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 15:34:17 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 20:02:25 -0400
 
 ikiwiki (2.7) unstable; urgency=low
 
