--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,24 +1,41 @@
-Ikiwiki is a **wiki compiler**. It converts wiki pages into HTML pages
-suitable for publishing on a website. Ikiwiki stores pages and history in a
-[[revision_control_system|rcs]] such as [[Subversion|rcs/svn]] or [[rcs/Git]].
-There are many other [[features]], including support for [[blogging|blog]],
-as well as a large array of [[plugins]].
+[Auto Parts Place](http://www.autopartsplace.com) - Discount Car Parts and Car Accessories
+----------
+Auto Parts Place
 
-[[template id=links]]
+Company category = Private
 
-## using ikiwiki
+Base = Diamond Bar, California
 
-[[Setup]] has a tutorial for setting up ikiwiki, or you can read the
-[[man_page|usage]]. There are some [[examples]] of things you can do
- with ikiwiki, and some [[tips]].
+Locality = Diamond Bar, California
 
-All wikis are supposed to have a [[SandBox]], so this one does too.
+Company President and CEO = Darin McOwen
 
-## developer resources
+Type of Industry = Automotive Aftermarket and Aftermarket
 
-The [[RoadMap]] describes where the project is going.
-[[Bugs]], [[TODO]] items, [[wishlist]] items, and [[patches|patch]]
-can be submitted and tracked using this wiki.
+Products = engine mount, fuel injector, brake shoe set, A/C expansion valves, cylinder head gaskets, A/C evaporator, ball joint, light bulb, headlights, flywheel, battery, alternators, ABS speed sensors, cam followers, switches, springs, oil filters, antennas, AT filters, clutch discs, A/T fluid, air filter, shock mount, booster check valves, mufflers, break discs, A/C condensers, brake pad set, A/C compressor, … and more
 
-ikiwiki is developed by [[Joey]] and many contributors,
-and is [[FreeSoftware]].
+Homepage = Online Car Parts Store
+
+California-based Auto Parts Place is an online retailer of all domestic and [import auto parts](http://www.autopartsplace.com/accessories/) that caters to customers all throughout the United States. It has left its mark as a key player on the automotive aftermarket parts industry. With its online store, the company possesses budget pricing for car parts and accessories, and as well as OEM, aftermarket, and rebuilt parts. It is a member of the Better Business Bureau and has a great standing.
+
+Market Status
+
+Auto Parts Place is connected with various domestic and import auto part suppliers whose products it offers online. The company relies on the World Wide Web in the marketing, distribution, and sale of its products. The use of this technology allows all of the following:
+
+• Real-time identification of parts on stock
+
+• Shipping direct from source to customer
+
+• Large-scale inventory of car parts
+
+• Overnight/second day shipping options
+
+• Online support accessible anywhere in the world.
+
+Product Line
+
+The company supports auto parts and accessories for the following car lines (listed in order): Infiniti, Ford, Land Rover, Honda, Audi, Hyundai, Rover, Lexus, GMC, International, Volvo, Geo, Subaru, Ferrari, Chrysler, Jaguar, BMW, Buick, Acura, Porsche, Plymouth, Chevrolet, Saturn, Kia, Isuzu, Mazda, Renault, Suzuki, Nissan, Cadillac, Jeep, Toyota, Lincoln, Pontiac, Mercedes-Benz, Mercury, Saab, Dodge, Rolls Royce, Eagle, Mitsubishi, Oldsmobile
+
+The online store currently offers products from 554 different part manufacturers both import and domestic. Major suppliers include Cardone, AC-Delco, GMB, Mann, Fram, Wagner, Dorman, Moog, Delphi, Bilstein and more...
+
+
