web commit by http://madduck.myopenid.com/: add my ikiwiki sites [madduck]

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -20,6 +20,7 @@ Projects
 * [Nouvelles Informations Positives Libres community](http://wiki.nipl.net/)
 * The [Portland State Aerospace Society](http://psas.pdx.edu) website.  Converted from a combination of TWiki and MoinMoin to ikiwiki, including full history ([[rcs/Git]] backend).
 * [DebTorrent](http://debtorrent.alioth.debian.org)
+* The [netconf project](http://netconf.alioth.debian.org)
 * The [Debian Packaging Handbook project](http://packaging-handbook.alioth.debian.org/wiki/)
 
 Personal sites and blogs
@@ -74,6 +75,7 @@ Personal sites and blogs
 * Andrew Sackville-West has setup a [family wiki](http://wiki.swclan.homelinux.org)
 * [Simon Ward's site](http://bleah.co.uk/) and [blog](http://bleah.co.uk/blog/).
 * [Paul Wise's homepage and blog](http://bonedaddy.net/pabs3/)
+* [Martin's PhD wiki](http://phd.martin-krafft.net/wiki)
 
 Please feel free to add your own ikiwiki site!
 
