* Fix copyright and licence styling.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.9) UNRELEASED; urgency=low
+
+  * Fix copyright and licence styling.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 20 Sep 2007 14:06:14 -0400
+
 ikiwiki (2.8) unstable; urgency=low
 
   * Redid the debian/copyright file, using the proposed new copyright file
