web commit by http://madduck.myopenid.com/: correction: seems related to page name

--- a/doc/bugs/map_does_not_link_directory_for_which_a_file_also_exists.mdwn
+++ b/doc/bugs/map_does_not_link_directory_for_which_a_file_also_exists.mdwn
@@ -1,1 +1,1 @@
-On <http://phd.martin-krafft.net/wiki/tag/factors/>, the only reason why the top-level 'factors' entry is not linked to the corresponding page is because there exists a `/factors.mdwn` file as well as a `factors/` directory, and I think `map` is getting confused.
+On <http://phd.martin-krafft.net/wiki/tag/factors/>, the top-level `factors` entry is not linked to the corresponding page. Looking at <http://phd.martin-krafft.net/wiki/tag/factors/language/>, this must be because the page name is the same as the entry name, and ikiwiki probably doesn't take the complete path of subpages into account.
