--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 ikiwiki (2.9) UNRELEASED; urgency=low
 
   * Fix copyright and licence styling.
+  * Add taglink preprocessor directive, supporting visible tag links.
+    Closes: #443344
 
- -- Joey Hess <joeyh@debian.org>  Thu, 20 Sep 2007 14:06:14 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 20 Sep 2007 14:57:52 -0400
 
 ikiwiki (2.8) unstable; urgency=low
 
