--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -11,6 +11,10 @@ tagged with a given tag, for example. The tags will also show up on blog
 entries and at the bottom of the tagged pages, as well as in RSS and Atom
 feeds.
 
+If you want a visible [[WikiLink]] along with the tag, use taglink instead:
+
+	\[[taglink foo]]
+
 This plugin has a configuration option. Set --tagbase=tags and links to tags
 will be located under the specified base page. If ikiwiki is configured
 this way, then the example above actually tags the page with the tags
