--- a/doc/tags.mdwn
+++ b/doc/tags.mdwn
@@ -2,16 +2,20 @@ While ikiwiki supports hierarchically categorising pages by creating
 [[SubPage]]s, that's often not flexible enough, and it can also be useful
 to tag pages in various non-hierarchical ways.
 
-Since this is a wiki, tagging is just a form of linking. For example, since
-this page links to [[features]], it can be considered to have something to
-do with ikiwiki's features. If you want to put pages into a category, the
-typical wiki way to do so is to create a "CategoryFoo" page and link pages
-in the category to it. That is just another form of tagging.
+Since this is a wiki, tagging is just a form of linking. The general rule
+is that all tags are links, but not all links are tags. So a tag is a
+special link that ikiwiki knows is intended to be used as a tag.
 
-Sometimes you may want to tag a page without putting a visible link on it.
+Generally you will tag a page without putting a visible link on it.
 The [[tag_plugin|plugins/tag]] allows you to do so, like this:
 
 	\[[tag mytag othertag thirdtag]]
+
+You can also tag a page with a visible link:
+
+	\[[taglink mytag]]
+
+This tag will be displayed just like a regular [[WikiLink]].
 
 One way to use these tags is to create a [[blog]] of pages that have a
 particular set of tags. Or just look at the [[BackLinks]] to a tag page to
