--- a/doc/todo/allow_creation_of_non-existent_pages.mdwn
+++ b/doc/todo/allow_creation_of_non-existent_pages.mdwn
@@ -6,4 +6,6 @@ in `apache`'s configuration, I think that it would be possible to let the user s
 
 From the [apache documentation](http://httpd.apache.org/docs/2.2/custom-error.html), it seems that the environment variable `REDIRECT_URL` will carry the name of the page the user has accessed. Also see [ErrorDocument](http://httpd.apache.org/docs/2.2/mod/core.html#errordocument)'s documentation.
 
+> Nice idea, I'll try to find time to add a plugin doing this. --[[Joey]]
+
 [[wishlist]]
