web commit by http://madduck.myopenid.com/: remove links, add snapshot since I moved on

--- a/doc/bugs/map_does_not_link_directory_for_which_a_file_also_exists.mdwn
+++ b/doc/bugs/map_does_not_link_directory_for_which_a_file_also_exists.mdwn
@@ -4,4 +4,6 @@ On <http://phd.martin-krafft.net/wiki/tag/factors/>, the top-level `factors` ent
 
 [[notfixed|notdone]] --[[Joey]]
 
-I can confirm that most if the issues are fixed, but if you look at the "tagged pages" map at <http://phd.martin-krafft.net/wiki/tag/factors/> again, you'll notice that map still includes and links to pages that do not match the pagespec. The list includes entries like `tag/factors/contribute`, but that page does *not* link/is not tagged with any `factors*` tag. --[[madduck]]
+I can confirm that most if the issues are fixed, but map still includes and links to pages that do not match the pagespec. The list includes entries like `tag/factors/contribute`, but that page does *not* link/is not tagged with any `factors*` tag. I have put a snapshot of the site as it was when I saw this bug at <http://scratch.madduck.net/web__phd.martin-krafft.net__map-bug-1.tgz> and can return to the state at any time, but I needed to move on now...
+
+--[[madduck]]
