web commit by http://madduck.myopenid.com/

--- a/doc/bugs/Excessive_list_nesting_in_map_output_for_subpages.mdwn
+++ b/doc/bugs/Excessive_list_nesting_in_map_output_for_subpages.mdwn
@@ -1,1 +1,1 @@
-Again, at <http://phd.martin-krafft.net/wiki/tag/factors> in the lower map, which iterates `link(tag/factors/*)`, the list with the factors is nested within *three* other `<ul>` tags. That seems a bit excessive.
+At <http://phd.martin-krafft.net/wiki/factors/tag/community/>, which iterates `link(tag/community)`, the list with the factors is nested within *three* other `<ul>` tags. That seems a bit excessive.
