--- a/doc/bugs/Map_sorts_subtags_under_a_different_tag.mdwn
+++ b/doc/bugs/Map_sorts_subtags_under_a_different_tag.mdwn
@@ -5,26 +5,26 @@ revert there any time, but I need to move on.
 
 I have a few tags starting with `a` (abridged list):
 
-> $ ls wiki/factors/tag/a*
-> [...]
-> wiki/factors/tag/active/:
-> index.html
->
-> wiki/factors/tag/affects/:
-> contributors/  developers/  users/
-> [...]
+    $ ls wiki/factors/tag/a*
+    [...]
+    wiki/factors/tag/active/:
+    index.html
+    
+    wiki/factors/tag/affects/:
+    contributors/  developers/  users/
+    [...]
 
 In `wiki-wc/factors/tag.mdwn`, I have a map for these tags:
 
-> [[map pages="factors/tag/*"]]
+    [[map pages="factors/tag/*"]]
 
 and this works, except that for *whatever* reason, it actually sorts the three
 `affects/*` tags under `active`:
 
-> $ w3m -dump wiki/factors/tag/index.html | grep active -A3
->               ○ active
->                   ■ contributors
->                   ■ developers
->                   ■ users
+    $ w3m -dump wiki/factors/tag/index.html | grep active -A3
+                  ○ active
+                      ■ contributors
+                      ■ developers
+                      ■ users
 
 This really blows my mind. :)
