--- a/doc/bugs/Map_sorts_subtags_under_a_different_tag.mdwn
+++ b/doc/bugs/Map_sorts_subtags_under_a_different_tag.mdwn
@@ -45,3 +45,5 @@ So it's not that the `<ul>` has an empty parent `<li>`, the three tags are
 *really* children of `active`.
 
 This really blows my mind. :)
+
+Rendering issue. [[fixed|done]] --[[Joey]]
