think this is fixed too..

--- a/doc/bugs/Excessive_list_nesting_in_map_output_for_subpages.mdwn
+++ b/doc/bugs/Excessive_list_nesting_in_map_output_for_subpages.mdwn
@@ -1,1 +1,3 @@
 At <http://phd.martin-krafft.net/wiki/factors/tag/community/>, which iterates `link(tag/community)`, the list with the factors is nested within *three* other `<ul>` tags. That seems a bit excessive.
+
+> Think I [[fixed|done]] this as part of fixing the other bug. --[[Joey]]
