* map: Render pages on the way to subpages whose parent pages   are not included in the map. Include special styling for such pages. * map: Remove common prefixes and don't over-indent. * Add class option to htmllink().

--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -412,7 +412,8 @@ control some options. These are:
 * forcesubpage  - set to force a link to a subpage
 * linktext - set to force the link text to something
 * anchor - set to make the link include an anchor
-* rel - set to add a rel attribute to the link.
+* rel - set to add a rel attribute to the link
+* class - set to add a css class to the link
 
 #### `readfile($;$)`
 
