--- a/debian/changelog
+++ b/debian/changelog
@@ -5,11 +5,12 @@ ikiwiki (2.9) UNRELEASED; urgency=low
     Closes: #443344
   * map: Fully specify paths to links to avoid issues when the bestlink
     didn't point to the correct page.
-  * map: Render empty nodes on the way to subpages whose parent pages
-    are not included in the map.
-  * map: Fix valid html issue.
+  * map: Render pages on the way to subpages whose parent pages
+    are not included in the map. Include special styling for such pages.
+  * map: Remove common prefixes and don't over-indent.
+  * Add class option to htmllink().
 
- -- Joey Hess <joeyh@debian.org>  Fri, 21 Sep 2007 13:28:32 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 22 Sep 2007 12:31:22 -0400
 
 ikiwiki (2.8) unstable; urgency=low
 
