* img: Allow link=somepage to cause the image to link to a given page.   Slight overriding of link, as link=no is still used to disable the linking   entirely. Unless you have a page named "no"..

--- a/doc/plugins/img/discussion.mdwn
+++ b/doc/plugins/img/discussion.mdwn
@@ -4,3 +4,4 @@ on <http://www.bddebian.com/~wiki/sidebar/> I'd like to have the
 logo link to \[[hurd/logo]] / <http://www.bddebian.com/~wiki/hurd/logo/>
 instead of linking to the PNG image file.  --[[tschwinge]]
 
+> Done, use link=somepage --[[Joey]]
