--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,11 @@ ikiwiki (2.9) UNRELEASED; urgency=low
     are not included in the map. Include special styling for such pages.
   * map: Remove common prefixes and don't over-indent.
   * Add class option to htmllink().
+  * img: Allow link=somepage to cause the image to link to a given page.
+    Slight overriding of link, as link=no is still used to disable the linking
+    entirely. Unless you have a page named "no"..
 
- -- Joey Hess <joeyh@debian.org>  Sat, 22 Sep 2007 12:31:22 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 22 Sep 2007 12:36:37 -0400
 
 ikiwiki (2.8) unstable; urgency=low
 
