--- a/doc/plugins/img.mdwn
+++ b/doc/plugins/img.mdwn
@@ -27,8 +27,8 @@ You can also pass `alt`, `class` and `id` parameters. These are passed through
 unchanged to the html img tag.
 
 The `link` parameter is used to control whether the scaled down image links
-to the full size version. By default it does; set "link=no" to disable
-this.
+to the full size version. By default it does; set "link=somepage" to link
+to another page instead, or "link=no" to disable the link.
 
 You can also set default values that will be applied to all later images on
 the page, unless overridden. Useful when including many images on a page.
