make taglink support the same method for specifying link text as a regular wikilink

--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -14,6 +14,7 @@ feeds.
 If you want a visible [[WikiLink]] along with the tag, use taglink instead:
 
 	\[[taglink foo]]
+	\[[taglink tagged_as_foo|foo]]
 
 This plugin has a configuration option. Set --tagbase=tags and links to tags
 will be located under the specified base page. If ikiwiki is configured
