--- a/doc/todo/Location_of_pages_starting_with___36__tagbase_should_be_in__by_default.mdwn
+++ b/doc/todo/Location_of_pages_starting_with___36__tagbase_should_be_in__by_default.mdwn
@@ -1,3 +1,9 @@
-If I click on a tag that does not yet have a name, but `$tagbase` is set, it would be nice if the location suggested is `$tagbase/<tagname>`, not a subpage: `<current>/$tagbase/<tagname>`.
+If I click on a tag that does not yet have a name, but `$tagbase` is set,
+it would be nice if the location suggested is `$tagbase/<tagname>`, not a
+subpage: `<current>/$tagbase/<tagname>`.
+
+> This only seems doable if the tag link you click on is in the "Tags:"
+> footer, or is added with a taglink directive. Think that's good enough?
+> --[[Joey]]
 
 [[tag wishlist]]
