--- a/doc/wikilink.mdwn
+++ b/doc/wikilink.mdwn
@@ -18,11 +18,10 @@ links at the start of a sentence, and so on.
 It's also possible to write a WikiLink that uses something other than the page
 name as the link text. For example `\[[foo_bar|SandBox]]` links to the SandBox
 page, but the link will appear like this: [[foo_bar|SandBox]]. The reason you
-have to (well, *should*) use underscores in place of spaces is so that
-`ikiwiki` can distinguish your WikiLink from a PreprocessorDirective.
+**have to use underscores in place of spaces in WikiLinks** is so that `ikiwiki`
+can distinguish your WikiLink from a PreprocessorDirective.
+(Note: you *can* actually use spaces if you specify the target link following the
+pipe symbil (`|`), as in the above.
 
 To link to an anchor inside a page, you can use something like
 `\[[WikiLink#foo]]`
-
-**Note that you cannot use spaces in WikiLinks**. Replace spaces with
-underscores.
