web commit by http://davrieb.livejournal.com/

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -76,6 +76,7 @@ Personal sites and blogs
 * [Simon Ward's site](http://bleah.co.uk/) and [blog](http://bleah.co.uk/blog/).
 * [Paul Wise's homepage and blog](http://bonedaddy.net/pabs3/)
 * [Martin's PhD wiki](http://phd.martin-krafft.net/wiki)
+* [David Riebenbauer's page](http://liegesta.at/)
 
 Please feel free to add your own ikiwiki site!
 
