web commit by madmax

--- a/doc/bugs/pipe_in_tables_as_characters.mdwn
+++ b/doc/bugs/pipe_in_tables_as_characters.mdwn
@@ -1,5 +1,7 @@
-How to put '|' character in a filed ? I tried escaping it but it does not work.
+How to put '|' character in a fieled ? I tried escaping it but it does not work.
+Seems tables are disabled here ?
 
+See this example:
 
 [[table class=table1 data="""
 aaaaaaaaaaaaaaa|b|c
