web commit by madmax

--- a/doc/bugs/pipe_in_tables_as_characters.mdwn
+++ b/doc/bugs/pipe_in_tables_as_characters.mdwn
@@ -1,4 +1,4 @@
-How to put '|' character in a fieled ? I tried escaping it but it does not work.
+How to put '|' character in a field ? I tried escaping it but it does not work.
 Seems tables are disabled here ?
 
 See this example:
