web commit by https://camrdale.myopenid.com/: Try putting divs around a list

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -83,6 +83,18 @@ Bulleted list
 
 -----
 
+<div class ="whatever">
+
+Try putting divs around a list:
+
+* first item
+* second item
+
+</div>
+
+----
+
+
 aaaaaaaaaaaaaaaa
 
 This sandbox is also a [[blog]]!
