web commit by https://camrdale.myopenid.com/: Try putting span around a list

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -83,14 +83,21 @@ Bulleted list
 
 -----
 
-<div class ="whatever">
+<div class="whatever">
 
-Try putting divs around a list:
+Try putting divs around a list doesn't work:
 
 * first item
 * second item
 
 </div>
+
+span also doesn't work:
+
+<span class="whatever">
+* first item
+* second item
+</span>
 
 ----
 
