web commit by madmax

--- a/doc/bugs/pipe_in_tables_as_characters.mdwn
+++ b/doc/bugs/pipe_in_tables_as_characters.mdwn
@@ -4,6 +4,8 @@ Seems tables are disabled here ?
 > Explicitly specify format=csv, then you can use pipes as values and even
 > use quotes to unambiguously include commas in values. --[[Joey]]
 
+>> Great! thanks.
+
 See this example:
 
 [[table class=table1 data="""
