--- a/doc/bugs/pipe_in_tables_as_characters.mdwn
+++ b/doc/bugs/pipe_in_tables_as_characters.mdwn
@@ -6,6 +6,8 @@ Seems tables are disabled here ?
 
 >> Great! thanks.
 
+>>> Guess I can mark this [[done]] --[[Joey]]
+
 See this example:
 
 [[table class=table1 data="""
