--- a/doc/rcs/git.mdwn
+++ b/doc/rcs/git.mdwn
@@ -10,7 +10,7 @@ commits edited pages, and uses the Git history to generate the [[RecentChanges]]
 
 Links:
 
-* [[Editing_wiki_pages_manually with git|GitManual]]
+* [[Editing_wiki_pages_manually_with_git|GitManual]]
 * [HOWTO: ikiwiki + git][howto]
 
 [howto]: http://fob.po8.org/node/346
