--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,20 @@
+ikiwiki (2.9) unstable; urgency=low
+
+  Since ikiwiki 2.0 was released, some limitiations have been added to what
+  ikiwiki considers a WikiLink. In short, if there are any spaces in between
+  the brackets, ikiwiki no longer considers it to be a WikiLink. If your wiki
+  contains things meant to be WikiLinks that contain spaces, you will need to
+  fix them, by replacing the spaces with underscores.
+  
+  WikiLink have always been documented to not contain spaces, but bugs in
+  ikiwiki made it treat some text with spaces as WikiLinks. Most of these
+  bugs were fixed in version 2.2, and a final bug was fixed in this 2.9
+  release. These fixes are necessary to avoid ambiguity between
+  WikiLinks and PreProcessorDirectives. Apologies for any inconvenience
+  these bugs (and their fixes) may have caused.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 29 Sep 2007 14:37:18 -0400
+
 ikiwiki (2.6) unstable; urgency=low
 
   In this version the rst plugin allows raw html to be embedded in rst files.
