--- a/doc/todo/Support__47__Switch_to_MultiMarkdown.mdwn
+++ b/doc/todo/Support__47__Switch_to_MultiMarkdown.mdwn
@@ -25,7 +25,7 @@ MultiMarkdown would solve the BibTex request and the multiple output formats wou
 
 [MultiMarkdown Homepage](http://fletcher.freeshell.org/wiki/MultiMarkdown)
 
-> I don't think MultiMarkdown solves [[the BibTeX request|todo/BibTeX]], but it might solve the request for LaTeX output. --[[JoshTriplett]]
+> I don't think MultiMarkdown solves [[the_BibTeX_request|todo/BibTeX]], but it might solve the request for LaTeX output. --[[JoshTriplett]]
 
 > Unless there's a way to disable a zillion of the features, please **no**. Do _not_ switch to it. One thing that I like about markdown as opposed to most other ASCII markup languages, is that it has at least a bit of moderation on the syntax (although it could be even simpler). There's not a yet another reserved character lurking behind every corner. Not so in multimarkdown anymore. Footnotes, bibliography and internal references I could use, and they do not add any complex syntax: it's all inside the already reserved sequences of bracketed stuff. (If you can even say that ASCII markup languages have reserved sequences, as they randomly decide to interpret stuff, never actually failing on illegal input, like a proper language to write any serious documentation in, would do.) But tables, math, and so on, no thanks! Too much syntax! Syntax overload! Bzzzt! I don't want mischievous syntaxes lurking behind every corner, out to get me. --[[tuomov]]
 
