web commit by http://madduck.myopenid.com/

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -22,6 +22,7 @@ Projects
 * [DebTorrent](http://debtorrent.alioth.debian.org)
 * The [netconf project](http://netconf.alioth.debian.org)
 * The [Debian Packaging Handbook project](http://packaging-handbook.alioth.debian.org/wiki/)
+* The [libkdtree project](http://libkdtree.alioth.debian.org)
 
 Personal sites and blogs
 ========================
